Fix form alignment

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
   display: flex;
+  margin: 0;
   padding: 0 19px;
 }
 
@@ -19,6 +20,10 @@
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .modal__close {
@@ -38,25 +43,27 @@
   font-size: 24px;
   font-weight: 900;
   line-height: 1.2;
+  width: 330px;
+  height: 23px;
   margin: 0;
+  padding: 0;
 }
 
 .modal__form {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 54px;
-  border-bottom: 1px;
-  background: #000;
-  max-width: 358px;
-  opacity: 0.2;
+  /* display: block; */
+  /* margin-top: 54px; */
+  /* width: 358px; */
+  padding: 0;
 }
 
 .modal__button {
   background-color: #000;
   width: 358px;
   height: 50px;
-  margin: 150px auto 0;
+  margin: 0 auto;
+  padding: 0;
   border-radius: 2px;
+  border: none;
   color: #fff;
   text-align: center;
   font-size: 18px;
@@ -68,6 +75,7 @@
   .modal__container {
     width: 282px;
     height: 322px;
+    padding: 25px 22px;
   }
 
   .modal__close {
